# IP-CoolifyMigration

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Make.cmd  Makefile  README.MD  SECURITY.MD  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/config/pr-labeler/: path-labels.yml
.github/workflows/: ai-issue-summary.yml  api-drift.yml  integration.yml  pr-labeler.yml  python-automatic-release.yml  release-assets.yml  security.yml  teams-notifications.yml  tests.yml
docs/: README.template.MD  SECURITY.template.MD  architecture.md  cli.md  configuration.md  index.md  installation.md  quickstart.md  safety.md  server-migration.md  troubleshooting.md  why.md
scripts/: generate-docs.py
src/bg_coolify_migrate/: __init__.py  cli.py  errors.py
src/bg_coolify_migrate/api/: client.py  fields.py  resources.py
src/bg_coolify_migrate/discovery/: __init__.py  docker.py  quiesce.py
src/bg_coolify_migrate/dns/: __init__.py  extract.py  gate.py  resolve.py  wildcard.py
src/bg_coolify_migrate/domain/: __init__.py  compose.py  drift.py  images.py  kinds.py  manifest.py  naming.py  plan.py  statemachine.py
src/bg_coolify_migrate/engine/: __init__.py  compensations.py  context.py  executor.py  keys.py  planner.py  runner.py  steps.py
src/bg_coolify_migrate/journal/: __init__.py  store.py
src/bg_coolify_migrate/observability/: __init__.py  logging_setup.py
src/bg_coolify_migrate/server/: __init__.py  appkey.py  fencing.py  inventory.py  runner.py  statemachine.py  steps.py
src/bg_coolify_migrate/settings/: __init__.py  base.py
src/bg_coolify_migrate/transfer/: __init__.py  partition.py  rsync.py  ssh.py  verify.py
src/bg_coolify_migrate/ui/: __init__.py  console.py  dashboard.py  report.py  run_report.py  server_report.py  wizard.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_fields.py  test_api_resources.py  test_cli.py  test_discovery.py  test_dns.py  test_dns_wildcard.py  test_domain_compose.py  test_domain_drift.py  test_domain_images.py  test_domain_kinds.py  test_domain_manifest.py  test_domain_naming.py  test_domain_plan.py  test_domain_statemachine.py  test_engine.py  test_engine_context.py  test_engine_planner.py  test_engine_steps.py  test_engine_wiring.py  test_journal.py  test_observability.py  test_packaging.py  test_server_migration.py  test_transfer.py  test_ui.py  test_ui_run.py  test_ui_wizard.py  test_verify_collect.py
tests/e2e/: README.md  __init__.py  bootstrap.py  conftest.py  docker-compose.yml  prepare.py  runner.Dockerfile  test_all_engines.py  test_compose_service.py  test_drift_gate.py  test_label_contract.py  test_multi_resource.py  test_real_migration.py  test_rollback.py
tests/integration/: __init__.py  docker-compose.yml  prepare.py  test_real_transfer.py
