[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bg-coolify-migrate"
dynamic = ["version"]
description = "BAUER GROUP Coolify migration toolkit — failsafe, resumable project and instance migration with byte-exact volume mirroring"
readme = "README.MD"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "BAUER GROUP (Karl Bauer)", email = "karl.bauer@bauer-group.com"},
]

keywords = ["coolify", "migration", "docker", "rsync", "devops", "self-hosted", "paas"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: Utilities",
]

# ── Mandatory core ───────────────────────────────────────────────────────────
# This is an APPLICATION, not a library: every dependency below is needed on
# every run. There are no extras for runtime features — a migration that cannot
# resolve DNS or open an SSH channel is not a partially-working migration, it is
# a broken one. Extras exist only for dev/docs.
dependencies = [
    "typer>=0.15.0,<1.0.0",
    "rich>=13.7.0,<16.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "structlog>=24.4.0,<26.0.0",
    # SSH: pure-python so Windows operators need no ssh/rsync binaries locally.
    # rsync always runs ON the Linux servers; asyncssh also gives us the reverse
    # port-forward used when source cannot reach target directly.
    "asyncssh>=2.18.0,<3.0.0",
    # DNS gate: we must query the AUTHORITATIVE nameserver, not the local cache.
    "dnspython>=2.7.0,<3.0.0",
    # Compose parsing (build: vs image: detection, volume declarations).
    "pyyaml>=6.0.0,<7.0.0",
    # Journal/state location that is correct on Windows as well as POSIX.
    "platformdirs>=4.3.0,<5.0.0",
    # Interactive wizard prompts.
    "questionary>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "respx>=0.22.0,<1.0.0",
    "hypothesis>=6.100.0,<7.0.0",
    # Quality
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    # Build & release (CI uses the reusable workflow; these are for local runs)
    "python-semantic-release>=9.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.scripts]
coolify-migrate = "bg_coolify_migrate.cli:main"

[project.urls]
Homepage = "https://github.com/bauer-group/IP-CoolifyMigration"
Source = "https://github.com/bauer-group/IP-CoolifyMigration"
Issues = "https://github.com/bauer-group/IP-CoolifyMigration/issues"
Changelog = "https://github.com/bauer-group/IP-CoolifyMigration/blob/main/CHANGELOG.md"

# ── Hatch build ──────────────────────────────────────────────────────────────
[tool.hatch.version]
path = "src/bg_coolify_migrate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bg_coolify_migrate"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/bg_coolify_migrate",
    "/tests",
    "/docs",
    "README.MD",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

# ── Semantic release ─────────────────────────────────────────────────────────
# Version is dynamic (sourced from __init__.py via hatch), so we update ONLY the
# __version__ variable — no version_toml (there is no static project.version).
[tool.semantic_release]
version_variables = ["src/bg_coolify_migrate/__init__.py:__version__"]
branch = "main"
build_command = "python -m build"
commit_parser = "conventional"
major_on_zero = false
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "chore", "ci", "build", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

# ── Tooling (mirrors BG-MCPCore) ─────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config", "--tb=short"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic._internal.*",
]
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
    "chaos: failure-injection tests asserting resume/rollback converge (deselect with '-m \"not chaos\"')",
    "e2e: real Coolify + two real Docker daemons; needs the rig (see tests/e2e/README.md)",
]

[tool.coverage.run]
source = ["src/bg_coolify_migrate"]
omit = ["tests/*", "*/__init__.py", "scripts/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
# Lint against the FLOOR of the supported range so we never use syntax newer
# than Python 3.12 (the minimum we ship).
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
# Type-check against the minimum supported version.
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
